# mcp-openvision

./: .cursorrules  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MCP_CONFIG.md  QUICKSTART.md  README.md  check_functionality.py  jlowin-fastmcp.txt  modelcontextprotocol-python-sdk-examples.txt  pyproject.toml  setup.py  smithery.yaml  test_direct.py
.ai/memory-bank/: activeContext.md  developmentPlan.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
.ai/stories/: implementation-plan.md  sample-implementation.md  simplified-openvision-server.md
.github/workflows/: auto-release.yml  autoformat.yml  ci.yml  publish.yml
examples/: README.md  basic_usage.py
scripts/: bump_version.py  smoke_test.py
src/mcp_openvision/: __init__.py  __main__.py  config.py  exceptions.py  mcp_openvision_image_analysis.mcp.json  server.py
tests/: __init__.py  test_config.py  test_server.py  test_vision.py
