[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-openvision"
version = "0.1.0"
description = "MCP server for image analysis using OpenRouter"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Nazruden", email = "example@example.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastmcp>=0.4.0",
    "openai",
    "pillow",
    "requests",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
mcp-openvision = "mcp_openvision.server:main"

[project.urls]
"Homepage" = "https://github.com/Nazruden/mcp-openvision"
"Bug Tracker" = "https://github.com/Nazruden/mcp-openvision/issues"

[tool.black]
line-length = 88

[tool.isort]
profile = "black" 