[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wojons-mcp-openvision"
version = "0.6.3"
description = "MCP server for image analysis using OpenRouter"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "wojons" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.6.0",
    "openai",
    "pillow",
    "requests",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
mcp-openvision = "mcp_openvision.server:main"

[project.urls]
"Homepage" = "https://github.com/wojons/mcp-openvision"
"Bug Tracker" = "https://github.com/wojons/mcp-openvision/issues"

[tool.black]
line-length = 88

[tool.isort]
profile = "black" 

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_openvision"]

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "LICENSE", "CHANGELOG.md", "MCP_CONFIG.md", "QUICKSTART.md", "examples", "scripts"]
